tests/functional/data/transpiler/common/errors/atomic/does_not_support_operation_cuda_subset.err
does_not_support_operation_cuda_subset.cpp:4:13: error: Atomic does not support this operation: j *= 12
    4 |             @atomic j *= 12;
      |             ^
